--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
 
         <activity android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/splashTheme">
+            android:theme="@style/splashTheme"
+            >
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
