--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
     defaultConfig {
         applicationId "com.example.flo"
         minSdk 21
-        targetSdk 31
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
@@ -34,10 +34,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-}
-
-configurations {
-    implementation.exclude group: 'org.jetbrains', module: 'annotations'
+    dependenciesInfo {
+        includeInApk false
+        includeInBundle false
+    }
 }
 
 dependencies {
@@ -51,8 +51,10 @@ dependencies {
 
     implementation 'androidx.room:room-ktx:2.4.2'
     implementation 'androidx.room:room-runtime:2.4.2'
+    annotationProcessor("androidx.room:room-compiler:2.4.2")
+
+    // to use Kotlin annotation processing tool (kapt)
     kapt 'androidx.room:room-compiler:2.4.2'
-    kapt "android.arch.persistence.room:compiler:1.1.1"
 
     testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
