네트워크 이용한 자동로그인 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FLO">
 
-        <activity android:name=".MainActivity"
+        <activity android:name=".SplashActivity"
             android:exported="true"
-            android:theme="@style/splashTheme"
             >
 
             <intent-filter>
@@ -25,6 +24,7 @@
 
         </activity>
 
+        <activity android:name=".MainActivity"/>
         <activity android:name=".SongActivity"/>
         <activity android:name=".LoginActivity"/>
         <activity android:name=".SignupActivity"/>
