--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,17 +47,19 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
+    // gson
     implementation 'com.google.code.gson:gson:2.9.0'
 
+    // bottom sheet dialog
     implementation 'com.google.android.material:material:1.7.0-alpha01'
 
+    // roomDB
     implementation 'androidx.room:room-ktx:2.4.2'
     implementation 'androidx.room:room-runtime:2.4.2'
     annotationProcessor("androidx.room:room-compiler:2.4.2")
-
-    // to use Kotlin annotation processing tool (kapt)
     kapt 'androidx.room:room-compiler:2.4.2'
 
+    // retrofit
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
 
