--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FLO">
 
-        <activity android:name=".ui.splash.SplashActivity"
-            android:exported="true"
-            >
+        <activity
+            android:name=".ui.splash.SplashActivity"
+            android:exported="true" >
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
